# rust-learn

./: README.md
aes/: Cargo.toml
aes/src/: main.rs
branches/src/: main.rs
chapter02/guessing_game/src/: main.rs
chapter02/s01_guessing_game/: Cargo.toml
chapter03/s01_functions/src/: main.rs
chapter03/s02_functions/src/: main.rs
chapter03/s03/src/: main.rs
chapter03/s03_branches/src/: main.rs
chapter04/s01_ownership/src/: main.rs
chapter05/s01_struct/: Cargo.toml
chapter05/s01_struct/src/: main.rs
chapter05/s02_rectangles/: Cargo.toml
chapter05/s02_rectangles/src/: main.rs
chapter06/s01_enum/: Cargo.toml
chapter06/s01_enum/src/: main.rs
chapter06/s02_match/: Cargo.toml
chapter06/s02_match/src/: main.rs
chapter06/s03_iflet/: Cargo.toml
chapter06/s03_iflet/src/: main.rs
chapter07/s01_restaurant/: Cargo.toml
chapter08/s03_hashmap/: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
fs/: Cargo.toml
fs/src/: main.rs
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
loops/src/: main.rs
ownership/src/: main.rs
rsa/: Cargo.toml
rsa/src/: main.rs
socket/client/: Cargo.toml
socket/client_with_tag/: Cargo.toml
socket/server/: Cargo.toml
socket/server_with_tag/: Cargo.toml
socket/server_with_tag/src/: main.rs
test/: Cargo.toml
test-file-en-or-de/: Cargo.toml
test-file-en-or-de/src/: main.rs
test-file-en-or-de/src/assets/dll/: RplFile64.lib
test-file-en-or-de/src/assets/raw/: bbb.txt
test/src/: main.rs
uuid/src/: main.rs
variables/src/: main.rs
(+8 files in other folders)
