[package]
name = "test-file-en-or-de"
version = "0.1.0"
edition = "2021"
authors = ["Fenpho <fenpho@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
rsa = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hex = "0.4"
libloading = "0.6"
base64 = "0.12.0"