[package]
name = "server_with_tag"
version = "0.1.0"
edition = "2021"
authors = ["Fenpho <fenpho@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"